# tesseract-api

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: app.py  settings.py  utils.py
