[tool.poetry]
name = "tesseract-api"
version = "0.1.0"
description = ""
authors = ["Arsenii Kuznetsov"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
gunicorn = "^19.9"
pytesseract = "^0.3.0"
Pillow = "^6.1"

[tool.poetry.dev-dependencies]
black = "19.3b0"
isort = "^4.3"
flake8 = "^3.7"
pre-commit = "^1.18"
mypy = "^0.720.0"

[tool.black]
line-length = 120
target-version = ['py37']
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

